--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@miblanchard/react-native-slider": "^2.3.1",
+    "@react-native-community/slider": "^4.4.2",
     "expo": "~48.0.11",
+    "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.6",
-    "react-native-web": "~0.18.11"
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-reanimated": "^3.1.0",
+    "react-native-smooth-slider": "^1.3.9",
+    "react-native-web": "^0.18.12",
+    "react-native-web-linear-gradient": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
