--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-reanimated": "^3.1.0",
     "react-native-smooth-slider": "^1.3.9",
     "react-native-web": "^0.18.12",
-    "react-native-web-linear-gradient": "^1.1.2"
+    "react-native-web-linear-gradient": "^1.1.2",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
