--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@miblanchard/react-native-slider": "^2.3.1",
     "@react-native-community/slider": "^4.4.2",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.11",
     "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
@@ -20,7 +22,8 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-linear-gradient": "^2.6.2",
-    "react-native-reanimated": "^3.1.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "^4.5.1",
     "react-native-smooth-slider": "^1.3.9",
     "react-native-web": "^0.18.12",
     "react-native-web-linear-gradient": "^1.1.2",
