--- a/package.json
+++ b/package.json
@@ -13,18 +13,23 @@
     "@react-native-community/slider": "^4.4.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "dotenv": "^16.0.3",
     "expo": "~48.0.11",
     "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
+    "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.6",
+    "react-native-config": "^1.5.0",
+    "react-native-dotenv": "^3.4.8",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-smooth-slider": "^1.3.9",
+    "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "^0.18.12",
     "react-native-web-linear-gradient": "^1.1.2",
     "recoil": "^0.7.7"
