--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://mehrdadq.github.io/movifyr",
   "name": "movifyr",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
