--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://mehrdadq.github.io/movifyr",
-  "name": "movifyr",
+  "homepage": "http://mehrdadq.github.io/Movifyr",
+  "name": "Movifyr",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
