--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/config-plugins": "~7.8.0",
+    "@expo/metro-config": "^0.10.0",
+    "@expo/prebuild-config": "~6.7.0",
     "@miblanchard/react-native-slider": "^2.3.1",
     "@react-native-community/slider": "^4.4.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "dotenv": "^16.0.3",
-    "expo": "~48.0.11",
+    "expo": "^50.0.4",
+    "expo-cli": "^6.3.10",
     "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "openai": "^3.2.1",
